# ABP_Modulo_Programador

./: .env  .gitattributes  .gitignore  README.md  main.py  pyproject.toml  skyroute.sql
src/controllers/: __init__.py  caratula.md  clientes.py  destinos.py  menu_principal.py  pasajes.py
src/controllers/scripts/: __init__.py  dato_ingresado.py  es_opcion_correcta.py  no_continuar.py  opcion_ingresada.py
src/models/: __init__.py  db_clientes.py  db_destinos.py  db_pasajes.py
src/models/scripts/: __init__.py  scripts.py
src/types/: Cliente.py  Destino.py  Pasaje.py  Pasaje_completo.py  __init__.py
src/utils/: __init__.py  consola_rich.py
