[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skyroute"
version = "1.0"
description = "Este sistema permite gestionar pasajes de SkyRoute como parte de un proyecto educativo."
authors = [
    {name = "Areosa, Fernando"},
    {name ="Muñoz Brizuela, Fátima Belén"},
    {name ="Varela, Mario"},
    {name ="Annone, Ariel Gastón"},
    {name ="Krenz, Catalina"}
]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
  "pandas"
]